kubernetes/apps/loki/gateway/service-gateway.yaml
---
# Source: loki/templates/gateway/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-gateway
  namespace: observability
  labels:
    helm.sh/chart: loki-6.24.0
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
    app.kubernetes.io/version: "3.3.2"
    app.kubernetes.io/component: gateway
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: http-metrics
    port: 80
    targetPort: http-metrics
    protocol: TCP
  selector:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
    app.kubernetes.io/component: gateway
