kubernetes/apps/loki/gateway/ingress-gateway.yaml
---
# Source: loki/templates/gateway/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-gateway
  namespace: observability
  labels:
    app.kubernetes.io/name: loki
    app.kubernetes.io/instance: loki
    traffic: external
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: "loki.iam-demo.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-gateway
            port:
              number: 80
  tls:
  - hosts:
    - "loki.iam-demo.test"
    secretName: iam-demo-loki-tls
